[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 声明成过程宏
[lib]
proc-macro = true

[dependencies]
darling = "0.20.8"
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.57", features = ["extra-traits"] }

[dev-dependencies]
anyhow = "1.0.83"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
